<resources>
    <string name="show_create_room">Create</string>
    <string name="show_create_tips1">Welcome to Live Streaming!</string>
    <string name="show_living">LIVE</string>
    <string name="show_pure">PURE</string>
    <string name="show_room_id">%s</string>
    <string name="show_user_count">%d</string>
    <string name="show_app_name">Live Streaming</string>
    <string name="show_live_top_close">Close</string>
    <string name="show_live_bottom_chat">Let\'s Chat</string>
    <string name="show_live_perms_leak_tip" >Missing permissions required for live streaming. Would you like to reapply?</string>
    <string name="show_live_yes">Yes</string>
    <string name="show_live_no">No</string>
    <string name="show_text_input_sent">Send</string>
    <string name="show_text_input_hint">Please input...</string>
    <string name="show_text_input_empty">Empty input</string>
    <string name="show_setting_switch_camera">Flip</string>
    <string name="show_setting_video_on">Camera On</string>
    <string name="show_setting_video_off">Camera Off</string>
    <string name="show_setting_mic_on">Mic On</string>
    <string name="show_setting_mic_off">Mic Off</string>
    <string name="show_setting_statistic">Stats for nerds</string>
    <string name="show_setting_quality">Video Quality</string>
    <string name="show_setting_advance_setting">Advanced Settings</string>
    <string name="show_setting_quality_enhance_tip">Due to your device being a low-end model, the super-resolution feature has been disabled to ensure smooth device performance.</string>
    <string name="show_setting_quality_enhance_tip2">Due to your device model or resolution settings, the super-resolution feature has been temporarily disabled to ensure smooth performance.</string>
    <string name="show_picture_quality_title">Resolution</string>
    <string name="show_picture_quality_1080p">1080P\nFHD</string>
    <string name="show_picture_quality_720p">720P\nHD</string>
    <string name="show_picture_quality_540p">540P\n</string>
    <string name="show_picture_quality_360p">360P\nSD</string>
    <string name="show_picture_quality_270p">270P\n</string>
    <string name="show_picture_quality_180p">180P\n</string>
    <string name="show_beauty_group_beauty">Beautification</string>
    <string name="show_beauty_item_none">None</string>
    <string name="show_beauty_item_beauty_smooth">Smooth</string>
    <string name="show_music_effect_title">Music Effects</string>
    <string name="show_music_effect_background">Background Music</string>
    <string name="show_music_effect_voice">Vocal Enhancement</string>
    <string name="show_music_effect_mixing">Reverb</string>
    <string name="show_music_effect_back_music_joy">Joy</string>
    <string name="show_music_effect_back_music_romantic">Romantic</string>
    <string name="show_music_effect_back_music_joy2">Joy2</string>
    <string name="show_music_effect_beauty_voice_original">Original</string>
    <string name="show_music_effect_beauty_voice_sweet">Sweet</string>
    <string name="show_music_effect_mixing_ktv">KTV</string>
    <string name="show_music_effect_mixing_concert">Concert</string>
    <string name="show_live_prepare_title">Live Streaming</string>
    <string name="show_live_prepare_rotate">Flip</string>
    <string name="show_live_prepare_beauty">Beautification</string>
    <string name="show_live_prepare_hd">Video Quality</string>
    <string name="show_live_prepare_tip"> NOTE: This version allows you to livestream for up to 10 minutes. Please
        ensure that the content of your livestream does not violate the Terms of Service you have agreed to, or the laws and regulations of your location, otherwise your livestream will be interrupted."</string>
    <string name="show_live_prepare_start_live">Go Live</string>
    <string name="show_live_prepare_room_empty">Room name cannot be empty!</string>
    <string name="show_live_prepare_room_clipboard_copyed">Room ID has been copied to the clipboard!</string>
    <string name="show_live_prepare_room_name_hint">Please enter the room name</string>
    <string name="show_beauty_item_beauty_whiten">Skin Tone</string>
    <string name="show_beauty_item_beauty_overall">Cheek Thin</string>
    <string name="show_beauty_item_beauty_vshape">V Shape</string>
    <string name="show_beauty_item_beauty_upper_width">Cheek Narrow</string>
    <string name="show_beauty_item_beauty_short_width">Cheek Small</string>
    <string name="show_beauty_item_beauty_cheekbone">Cheek</string>
    <string name="show_beauty_item_beauty_eye">Enlarge</string>
    <string name="show_beauty_item_beauty_nose">Nose Size</string>
    <string name="show_beauty_item_beauty_chin">Chin</string>
    <string name="show_beauty_item_beauty_jawbone">Jaw</string>
    <string name="show_beauty_item_beauty_forehead">Hairline</string>
    <string name="show_beauty_item_beauty_mouth">Mouth</string>
    <string name="show_beauty_item_beauty_thick_lips">Full Lip</string>
    <string name="show_beauty_item_beauty_teeth">Tooth</string>
    <string name="show_beauty_group_filter">Filter</string>
    <string name="show_beauty_group_effect">Makeup</string>
    <string name="show_beauty_group_style">Classic Style</string>
    <string name="show_beauty_group_sticker">Sticker</string>
    <string name="show_beauty_group_ar">AR Mask</string>
    <string name="show_beauty_item_filter_cream">Creamy</string>
    <string name="show_beauty_item_filter_mokalong">Macaroon</string>
    <string name="show_beauty_item_filter_oxgen">Oxygen</string>
    <string name="show_beauty_item_filter_wuyu">monogatari</string>
    <string name="show_beauty_item_filter_po9">seaside characters</string>
    <string name="show_beauty_item_filter_lolita">lolita</string>
    <string name="show_beauty_item_filter_mitao">peach</string>
    <string name="show_beauty_item_filter_yinhua">Cherry blossoms</string>
    <string name="show_beauty_item_filter_beihaidao">Hokkaido</string>
    <string name="show_beauty_item_filter_s3">journey</string>
    <string name="show_beauty_item_effect_baixi">white</string>
    <string name="show_beauty_item_effect_tianmei">Sweet</string>
    <string name="show_beauty_item_effect_sexy">Sexy</string>
    <string name="show_beauty_item_style_natural">Natural</string>
    <string name="show_beauty_item_style_classic">Classic</string>
    <string name="show_beauty_item_effect_cwei">C</string>
    <string name="show_beauty_item_effect_yuanqi">Vitality</string>
    <string name="show_beauty_item_sticker_biti">snot</string>
    <string name="show_beauty_item_sticker_zhounian">anniversary carnival</string>
    <string name="show_beauty_item_sticker_huahua">Flowers</string>
    <string name="show_beauty_item_sticker_cat">Cat</string>
    <string name="show_beauty_item_sticker_elk">Elk</string>
    <string name="show_beauty_item_ar_kaola">Koala</string>
    <string name="show_beauty_item_ar_hashiqi">Husky</string>
    <string name="show_beauty_item_sticker_wochaotian">Sweet</string>
    <string name="show_statistic_bitrate">Bitrate: %s kbps</string>
    <string name="show_statistic_up_bitrate">Send Bitrate: %s kbps</string>
    <string name="show_statistic_down_bitrate">Receive Bitrate: %s kbps</string>
    <string name="show_statistic_fps">FPS: %s fps</string>
    <string name="show_statistic_delay">Latency: %s ms</string>
    <string name="show_statistic_loss_package">Packet Loss: %s ％</string>
    <string name="show_statistic_up_net_speech">Uplink Speed: %s KB/s</string>
    <string name="show_statistic_down_net_speech">Downlink Speed: %s KB/s</string>
    <string name="show_statistic_resolution">Resolution: %s</string>
    <string name="show_statistic_up">Sender</string>
    <string name="show_statistic_encode_resolution">Encode Resolution: %s</string>
    <string name="show_statistic_encode_fps">Encode FPS: %s fps</string>
    <string name="show_statistic_up_loss_package">Uplink Packet Loss: %s ％</string>
    <string name="show_statistic_down">Receiver</string>
    <string name="show_statistic_receive_resolution">Received Resolution: %s</string>
    <string name="show_statistic_receive_fps">Received FPS: %s fps</string>
    <string name="show_statistic_down_loss_package">Downlink Packet Loss: %s ％</string>
    <string name="show_statistic_else">Others</string>
    <string name="show_statistic_quick_start_time">First Frame: %s ms</string>
    <string name="show_statistic_encoder">Encoder: %s</string>
    <string name="show_device_grade">Device Level: %s</string>
    <string name="show_statistic_sr">Super Clarity: %s</string>
    <string name="show_statistic_pvc">PVC: %s</string>
    <string name="show_statistic_low_stream">Low-quality Video Stream: %s</string>
    <string name="show_statistic_svc">SVC: %s</string>
    <string name="show_statistic_h265">H265: %s</string>
    <string name="show_music_effect_beauty_voice_zhongxin">Neutral</string>
    <string name="show_music_effect_beauty_voice_wenzhong">Steady</string>
    <string name="show_music_effect_beauty_voice_mohuan">Magical</string>
    <string name="show_music_effect_mixing_luyinpen">Studio</string>
    <string name="show_music_effect_mixing_kongkuang">Spacious</string>
    <string name="show_linking_request_message">Application</string>
    <string name="show_online_audience">Online Audience</string>
    <string name="show_agree_onseat">Accept</string>
    <string name="show_application">Invite</string>
    <string name="show_application_waitting">Waiting</string>
    <string name="show_empty_onseat_apply">No Application Yet</string>
    <string name="show_apply_onseat">Apply Co-host</string>
    <string name="show_stop_linking">End</string>
    <string name="show_cancel_linking">Revoke</string>
    <string name="show_linking">Co-hosting</string>
    <string name="show_is_onseat">Co-host</string>
    <string name="show_reject_onseat">Declined</string>
    <string name="show_audience_settings">Audience Settings</string>
    <string name="show_can_apply">Available for co-host</string>
    <string name="show_link_is_stopped">Co-host ended.</string>
    <string name="show_interacting">Engaging</string>
    <string name="show_tip1">The host is busy and has declined your invitation.</string>
    <string name="show_to_the_audience">To audience %s</string>
    <string name="show_link_to">Co-hosting with %s</string>
    <string name="show_get_in_line">Queue</string>
    <string name="show_local_uid">Local UID：%s</string>
    <string name="show_pk_to">PK with %s</string>
    <string name="show_pking_request_message">PK List</string>
    <string name="show_online_boardcaster">Online Host</string>
    <string name="show_pking">In PK</string>
    <string name="show_stop_pking">End</string>
    <string name="show_empty_online_boardcaster">No online host</string>
    <string name="show_empty_online_audience">No online audience</string>
    <string name="show_pk">Co-host</string>
    <string name="show_pk_dialog_header">To %s</string>
    <string name="show_can_pk">Available for PK</string>
    <string name="show_cannot_accept">You are currently engaged in an interaction. Please finish the interaction before accepting any request for co-host.</string>
    <string name="show_cannot_invite">You are currently engaged in an interaction. Please finish the interaction before inviting audience for co-host.</string>
    <string name="show_cannot_invite_pk">You are currently engaged in an interaction. Please finish the interaction before inviting host for pk.</string>
    <string name="show_cannot_apply">You are currently engaged in an interaction. Please finish the interaction before applying for co-host.</string>
    <string name="show_ask_for_link">Host %s invites you to co-host.</string>
    <string name="show_ask_for_pk">Host %s invites you to co-host.</string>
    <string name="show_count_time_for_pk">PK 0%s:%s</string>
    <string name="show_pk_is_stopped">PK ended</string>
</resources>